# Projects

C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/: CMakeLists.txt  CMakeSettings.json
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/: CMakeLists.txt  globaldef.h  main.cpp
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/cppcodebuilder/: consoletext.cpp  consoletext.h  cppcodebuilder.cpp  cppcodebuilder.h  worker.cpp  worker.h
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/documentation/: documentationpackage.cpp  documentationpackage.h  documentationwidget.cpp  documentationwidget.h
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/mainwindow/: compilersearch.cpp  compilersearch.h  mainwindow.cpp  mainwindow.h  storagelocation.cpp  storagelocation.h  welcomewidget.cpp  welcomewidget.h
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/mainwindow/ui/: compilersearch.ui  mainwindow.ui  welcomewidget.ui
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/pdfreader/: pdflistwidget.cpp  pdflistwidget.h  pdfpackage.cpp  pdfpackage.h  pdfreaderwidget.cpp  pdfreaderwidget.h
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/res/: autocompleteCpp.api  english.qm  resources.qrc  russian.qm
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/res/scenecursor/: edge.cur  face.cur  point_cur.cur  vertex.cur
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/res/scripts/: documentation.js  tutorial.css  tutorial.js
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/res/scripts/highlight/: highlight.min.js
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/res/texts/: tutorialbody.html  untitle.cpp
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/res/themes/: dark.qss  light.qss
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/scene/: colorbutton.cpp  colorbutton.h  visionscene.cpp  visionscene.h
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/textedit/: findtextwidget.cpp  findtextwidget.h  lexercxx.cpp  lexercxx.h  texteditmanager.cpp  texteditmanager.h  texteditor.cpp  texteditor.h  texteditwidget.cpp  texteditwidget.h
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/textedit/ui/: findtextwidget.ui  texteditwidget.ui
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/translations/: english.ts  russian.ts
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/tutorial/: tutorialgallerywidget.cpp  tutorialgallerywidget.h  tutorialloader.cpp  tutorialloader.h  tutorialpackage.cpp  tutorialpackage.h  tutorialwebpage.cpp  tutorialwebpage.h  tutorialwidget.cpp  tutorialwidget.h
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/C3DShellCodingTutorial/webviewer/: webpage.cpp  webpage.h  webview.cpp  webview.h  webviewwidget.cpp  webviewwidget.h
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/CMake/: VsnAngleConf.cmake  VsnCoreConfig.cmake  VsnCoreConfigExtras.cmake  VsnCoreMacros.cmake  vision_support.cmake
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/Models/: 078.505.0.0103.00.c3d  Bracket.c3d  Electrical appliance box.c3d  Gear-shaft.c3d  Leaky_cube.c3d  M_1_13_2.c3d  M_1_16_5.c3d  M_1_1_1.c3d  M_1_1_2.c3d  M_1_1_3.c3d  M_1_1_4.c3d  M_1_1_5.c3d  M_1_1_6.c3d  M_1_1_7.c3d  M_1_1_8.c3d  M_1_1_9.c3d  M_1_2_2.c3d  M_1_3_14.c3d  M_1_3_21.c3d  M_1_3_3.c3d  M_1_3_8.c3d  M_1_4_11.c3d  M_1_4_15.c3d  M_1_4_4.c3d  M_1_4_8.c3d  M_1_5_19.c3d  M_1_5_5.c3d  M_1_5_9.c3d  M_1_6_15.c3d  M_1_6_5.c3d  M_2_10_12.c3d  M_2_10_15.c3d  M_2_10_17.c3d  M_2_10_19.c3d  M_2_10_2.c3d  M_2_10_20.c3d  M_2_10_22.c3d  M_2_10_23.c3d  M_2_10_24.c3d  M_2_10_7.c3d  (+59 more)
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/QtVision/: CMakeLists.txt
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/QtVision/Include/: lisencekey.h  qt_openglwidget.h  qt_openglwidgetprivate.h
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/QtVision/src/: qt_openglwidget.cpp
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/Shared/: vsn_graphicssceneview.cpp  vsn_graphicssceneview.h  vsn_prcameramanipulate.cpp  vsn_prcameramanipulate.h  vsn_scenerepbuilder.cpp  vsn_scenerepbuilder.h
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/Tutorials/Modeler/01_01_kernel_first_lesson/: source.md  tutorial.xml
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/Tutorials/Modeler/01_02_curves_in_2d_space_second_lesson/: source.md  tutorial.xml
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/Tutorials/Modeler/01_03_compound_curves_and_splines_in_2d_space_third_lesson/: source.md  tutorial.xml
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/Tutorials/Modeler/01_04_basic_types_of_surfaces_fourth_lesson/: source.md  tutorial.xml
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/Tutorials/Modeler/01_05_motion_surfaces_fifth_lesson/: source.md  tutorial.xml
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/Tutorials/Modeler/01_06_basic_operations_of_building_solids_sixth_lesson/: source.md  tutorial.xml
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/Tutorials/Modeler/01_07_build_operations_solid_bodies_of_arbitrary_shape_seventh_lesson/: source.md  tutorial.xml
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/Tutorials/Modeler/01_08_boolean_operations_eighth_lesson/: source.md  tutorial.xml
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/Tutorials/Modeler/01_09_solids_processing_operations_lesson/: source.md  tutorial.xml
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/Tutorials/Modeler/01_10_modification_of_edges_and_faces_of_solids_tenth_lesson/: source.md  tutorial.xml
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/Tutorials/User_manual/User_manual/: source.md  tutorial.xml
C3DShellCodingTutorial (Qt)/C3DShellCodingTutorial/pdfjs/web/: pdf.viewer.js  viewer.html
(+1022 files in other folders)
